# i2b2-upload-client

./: .gitignore  README.md  build-bash-zip.sh  build-pyside-gui.sh  build-win-zip.sh  dwh_client.spec  pyproject.toml
bash-client/: install.sh
bash-client/scripts/: dwh-processing.sh  local-processing.sh
docker/: Dockerfile  coordinate_data_processing.sh  process_data.sh
multi-build/: build-clients.sh
multi-build/cli-client-scripts/: install.sh  stage1.sh  stage2.sh  stage3.sh
multi-build/gui-client-scripts/: install.sh  launch.sh
old/gui/src/: basicMainWindowSingleThread.py  mainWindow_EARLY.ui
resources/: README.md  dwh_client.sh  fhir_both-python.xslt  install-gui.sh
src/: api_processing.py  build_executables.py  dwh_client.py  process-pid.py  requirements.txt  send-data.py  stream-pseudonymization.py  stream_pseudonymization.py
src/gui/: dwh_client.py  mainWindow.ui  requirements.txt
src/i2b2_upload_client/gui/: mainWindow.ui
src/i2b2_upload_client/logic/: api_processing.py  stream_pseudonymization.py
windows-client/: install.sh
windows-client/scripts/: dwh-processing.sh  local-processing.sh
